--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -290,7 +290,8 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="/images/" class="nav-link" data-tooltip="Imágenes">
+                            <a href="javascript:void(0)" class="nav-link disabled-link"
+                                data-tooltip="Imágenes (En Desarrollo)">
                                 <span class="nav-link-icon"><i class="bi bi-image"></i></span>
                                 <span class="nav-link-text">Imágenes</span>
                             </a>
