--- a/app/templates/dispatch_board.html
+++ b/app/templates/dispatch_board.html
@@ -353,6 +353,10 @@
                             <i class="bi bi-star"></i>
                             <span id="priority-btn-text">Marcar Prioritario</span>
                         </button>
+                        <button class="btn btn-outline-success btn-sm" id="btn-atendido-modal">
+                            <i class="bi bi-check-circle"></i>
+                            <span id="atendido-btn-text">Marcar como Atendido</span>
+                        </button>
                     </div>
                 </div>
 
